tests/errors/sem.expected-function.subscript-decl.or
main :: () -> void {
    @subscript x :: 4;
    x;
};
